fix elements z-index

--- a/src/css/_map.sass
+++ b/src/css/_map.sass
@@ -22,6 +22,7 @@
   position: absolute
   border-radius: 4px
   box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5)
+  z-index: 100
   input
     width: 400px
     border: 0px none
