--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -61,6 +61,7 @@ year-selector
     border-radius: 3px
     text-align: left
     width: 90px
+    z-index: 200
     .inner
       padding-left: 10px
     ul
